<?xml version="1.0"?>
<package>
  <name>ec_drivers</name>
  <version>1.0.0</version>
  <description>The ec_drivers package</description>

  <maintainer email="konradb3@gmail.com">Konrad Banachowicz</maintainer>

  <license>BSD</license>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="konradb3@gmail.com">Konrad Banachowicz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ec_hardware</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rtt</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>ec_hardware</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_rosclock</run_depend>

  <run_depend>sensor_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rtt_plugin_depend>rtt_ros</rtt_plugin_depend>
  </export>
</package>